Fix form buttons not wrapping into new lines.

--- a/css/styles.css
+++ b/css/styles.css
@@ -209,6 +209,7 @@ a:hover, a:focus {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	flex-wrap: wrap;
 	gap: 10px;
 	margin-top: 20px;
 }
